force-app/main/default/objects/Payment__c/Payment__c.object-meta.xml
<CustomObject>
    <description>store the details of Payments received for an Invoice/order as per below. There can be 1 or payment records for a single invoice</description>
    <label>Payment</label>
    <nameField>
        <displayFormat>P-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>