force-app/main/default/objects/Payment__c/fields/Employer1__c.field-meta.xml
<CustomField>
    <fullName>Employer1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employer1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>