force-app/main/default/objects/Payment__c/fields/Employer__c.field-meta.xml
<CustomField>
    <fullName>Employer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Payment against order generated by a person belongs to the selected Employer</description>
    <inlineHelpText>Person&apos;s Employer who placed the order.</inlineHelpText>
    <label>Employer</label>
    <referenceTo>Order_Detail__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>