force-app/main/default/objects/Payment__c/fields/Failure_reason__c.field-meta.xml
<CustomField>
    <fullName>Failure_reason__c</fullName>
    <description>Reason for failure</description>
    <inlineHelpText>Reason for failure</inlineHelpText>
    <label>Failure reason</label>
    <length>200</length>
    <type>Text</type>
</CustomField>