force-app/main/default/objects/Payment__c/fields/Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount__c</fullName>
    <description>Amount paid by customer</description>
    <inlineHelpText>Amount paid for an order</inlineHelpText>
    <label>Payment Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>