force-app/main/default/objects/Payment__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <description>Date time when the Payment was attempted</description>
    <inlineHelpText>Date time when the Payment was attempted</inlineHelpText>
    <label>Payment Date</label>
    <type>DateTime</type>
</CustomField>