force-app/main/default/objects/Payment__c/fields/Payment_Status_Color__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status_Color__c</fullName>
    <formula>if (  ISPICKVAL(Status__c, &apos;Success&apos;)   ,IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 30, 30) ,IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 30, 30) )</formula>
    <label>Payment Status(Color)</label>
    <type>Text</type>
</CustomField>