force-app/main/default/objects/Payment__c/fields/Status_Flag__c.field-meta.xml
<CustomField>
    <fullName>Status_Flag__c</fullName>
    <formula>if (  ISPICKVAL(Status__c, &apos;Success&apos;)   ,IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Green Flag&quot;),IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red Flag&quot;) )</formula>
    <label>Status Flag</label>
    <type>Text</type>
</CustomField>