force-app/main/default/objects/Payment__c/fields/Transaction_id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_id__c</fullName>
    <description>Payment Transaction ID</description>
    <displayFormat>TXN-{0000}</displayFormat>
    <inlineHelpText>Reference transaction ID for a payment</inlineHelpText>
    <label>Transaction id</label>
    <type>AutoNumber</type>
</CustomField>