force-app/main/default/objects/Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employer1__c</columns>
    <columns>Payment_Amount__c</columns>
    <columns>Payment_Date__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>